2000-02-17  Jason Merrill  <jason@casey.cygnus.com>

	* bitmap.c (bitmap_operation): Don't leak bitmap elements.

2000-02-17  Mark Mitchell  <mark@codesourcery.com>

	* function.c (thread_prologue_and_epilogue_insns): Put a line note
	after the prologue.

2000-02-17  Nick Clifton  <nickc@cygnus.com>

	* config/arm/thumb.c: Replace includes of system headers with
	#include "system.h".

2000-02-16  Richard Henderson  <rth@cygnus.com>

	* configure.in (alpha-linux*, alpha-netbsd) [extra_parts]:
	Add crtbeginS.o and crtendS.o.
	* alpha/elf.h (STARTFILE_SPEC): Use crtbeginS.o.
	(ENDFILE_SPEC): Use crtendS.o.
	* alpha/t-crtbe (crtbeginS.o, crtendS.o): New targets.

	* alpha/crtbegin.asm (__do_frame_takedown): Merge into ...
	(__do_global_dtors_aux): ... here.  Call __cxa_finalize if
	shared and present.
	(__dso_handle): New variable.
	* alpha/crtend.asm (__do_global_ctors_aux): Remove runtime
	bias to __CTOR_END__.
	
2000-02-16  Richard Henderson  <rth@cygnus.com>

	* Makefile.in (s-crtS, crtbeginS, crtendS): Prefix usage with $(T).

Wed Feb 16 21:40:04 2000  Hans-Peter Nilsson  <hp@bitrange.com>

	* longlong.h (__clz_tab): Declare as static to match definition.

2000-02-16 Mark Elbrecht <snowball3@bigfoot.com>
	* i386/xm-djgpp.h (LIBSTDCXX): Delete. Moved to config/i386/djgpp.h.
	(XREF_FILE_NAME): Define.

	* i386/djgpp.h (DATA_SECTION_ASM_OP): Define.
	(EH_FRAME_SECTION_ASM_OP): Define.
	(IDENT_ASM_OP): Define.
	(TEXT_SECTION_ASM_OP): Define.
	(CPP_SPEC): Define.
	(CTORS_SECTION_ASM_OP): Define.
	(CTOR_SECTION_FUNCTION): Use it.
	(DTORS_SECTION_ASM_OP): Define.
	(DTOR_SECTION_FUNCTION): Use it.

2000-02-16  Zack Weinberg  <zack@wolery.cumb.org>

	* reg-stack.c (emit_swap_insn): Do not put a new insn before a
	NOTE_BASIC_BLOCK.

	* flow.c (dump_regset, debug_regset, dump_bb, debug_bb,
	debug_bb_n): New functions.
	(dump_flow_info, print_rtl_with_bb): Use dump_regset.
	* basic-block.h: Prototype new functions.
