@@ -1,3 +1,9 @@
+2000-02-17  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl2.c (lang_decode_option): Don't set default message length
+	here.
+	* lex.c (lang_init_options): Set it here.
+
 2000-02-16  Mark Mitchell  <mark@codesourcery.com>
 
 	Make DECL_CONTEXT mean the class in which a member function was
