@@ -1,3 +1,7 @@
+2000-02-17  Mark Mitchell  <mark@codesourcery.com>
+
+	* invoke.texi (-fmessage-length=n): Document.
+
 2000-02-17  Jason Merrill  <jason@casey.cygnus.com>
 
 	* bitmap.c (bitmap_operation): Don't leak bitmap elements.
